--- a/3. Application Management and Deployment/nginx/Dockerfile
+++ b/3. Application Management and Deployment/nginx/Dockerfile
@@ -1,1 +1,8 @@
+FROM nginx
 
+ADD certs/server.crt /etc/nginx/server.crt
+ADD certs/server.key /etc/nginx/server.key
+ADD conf/default.conf /etc/nginx/templates/nginx.conf.template
+
+EXPOSE 80
+EXPOSE 443
