--- a/3. Application Management and Deployment/nginx/conf/default.conf
+++ b/3. Application Management and Deployment/nginx/conf/default.conf
@@ -1,1 +1,33 @@
+events {}
 
+http {
+
+   upstream flask {
+      server ${FLASK_HOST}:${FLASK_PORT};
+   }
+
+server {
+    listen 80;
+    server_name localhost;
+    return 301 https://localhost$request_uri;
+}
+
+server {
+    listen 443;
+    server_name localhost;
+    root /usr/share/nginx/html;
+
+    ssl_certificate /etc/nginx/server.crt;
+    ssl_certificate_key /etc/nginx/server.key;
+
+    ssl on;
+    ssl_session_cache  builtin:1000  shared:SSL:10m;
+    ssl_protocols  TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers HIGH:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
+    ssl_prefer_server_ciphers on;
+
+    location / {
+            proxy_pass http://flask;
+      }
+}
+}
